click-circles are now clickable. still have a z-index issue.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -38,6 +38,10 @@ input {
     fill: #FFF;
     stroke: #666;
     stroke-width: 1px;
+    z-index: 1;
+}
+.click-circle:hover {
+    cursor: pointer;
 }
 
 .axis text {
